--- a/images/bo-ga-chun-chan-bon-mua-140x200-tr/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-140x200-tr/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-140x200-tr.html
 lastopen = 2024-06-07 00:25:30
 
 [search]
-lastsearch = 2024-08-10 01:37:08
+lastsearch = 2024-08-10 03:48:40
 
 [everon.online]
 match = 50.0%%
@@ -27,9 +27,9 @@ title = Bộ chăn bốn mùa Dòng Thời Gian - EPT24081 - Everon
 url = https://everonchinhhang.vn/products/bo-chan-bon-mua-dong-thoi-gian-ept24081
 
 [vuanem.com]
-match = 5.9%%
-title = Mua Bộ Ga Chun Chần Chất Lượng - Cao Cấp - Giá Tốt Nhất
-url = https://vuanem.com/chan-ga-goi/bo-ga-chun-chan
+match = 14.7%%
+title = Bộ Ga chun chăn chần Everon bốn mùa 4 chi tiết màu ...
+url = https://vuanem.com/bo-ga-chun-chan-chan-everon-EST23034.html?srsltid=AfmBOopoFxNqA72k0pYSbBbo0SjACt5eI1rH8fUeQmV1EqlBxtFfDmEV
 
 [everonvn.com.vn]
 match = 32.1%%
@@ -64,7 +64,7 @@ url = https://ninhouse.vn/collections/bo-chan-ga-goi-dem-cotton
 [jysk.vn]
 match = -26.5%%
 title = Ga Chun 140 x 200 cm Bọc Nệm Cotton Satin Cao Cấp | JYSK
-url = https://jysk.vn/ga-chun-140x200cm
+url = https://jysk.vn/ga-chun-140x200cm?srsltid=AfmBOopceD3vdrpSGRpxie6a_gZtvIqJN__ANZ3oyHAcZt_AXUiz-PSf
 
 [anpha.vuanem.com]
 match = 0.0%%
@@ -92,9 +92,9 @@ title = Bộ ga chun
 url = http://nemxinh.net/bo-ga-chun-cp208.html
 
 [shopee.vn]
-match = 41.2%%
-title = Bộ ga chun chần - chăn bốn mùa EVERON bao gồm
-url = https://shopee.vn/Bộ-ga-chun-chần-chăn-bốn-mùa-EVERON-bao-gồm-01-Ga-chun-chần-01-Chăn-bốn-mùa-200*220-02-Vỏ-gối-45*65-esm21012-i.40934475.12629552910
+match = 44.1%%
+title = Bộ ga chun chần 4 mùa Everon ESMS 24011
+url = https://shopee.vn/Bộ-ga-chun-chần-4-mùa-Everon-ESMS-24011-1-ga-chun-chần-1-Chăn-bốn-mùa-200*220-2-Vỏ-gối-45*65-i.40934475.23373164027
 
 [changagoidemsonghong.com]
 match = 14.7%%
@@ -122,9 +122,9 @@ title = Video help, tips, and techniques
 url = https://archive.org/help/video.php?identifier=jadi-anime-cap-cut-template-4&ht=480&wd=640&url=https://xn--b1af6a4ab0d.xn--p1ai/1342695xjjbz1cfd4fe43y
 
 [everon.com]
-match = -1500.0%%
-title = Ga
-url = https://everon.com/danh-muc-san-pham/ga
+match = -150.0%%
+title = Bộ chăn ga
+url = https://everon.com/danh-muc-san-pham/bo-chan-ga
 
 [songhong.info]
 match = 2.9%%
