--- a/images/chieu-coi-viet-thai-18/config.ini
+++ b/images/chieu-coi-viet-thai-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-coi-viet-thai-18.html
 lastopen = 2024-06-06 16:54:00
 
 [search]
-lastsearch = 2024-08-10 03:26:04
+lastsearch = 2024-08-10 03:50:49
 
 [chieutruc.info]
-match = -63.6%%
-title = Bảng giá chiếu Thái Lan dòng gấp vân gỗ cao cấp
-url = https://chieutruc.info/chieu-thai-lan-gap-van-go/
+match = -100.0%%
+title = Bảng giá chiếu cói Xuân Hòa xuất khẩu - hàng Việt Nam cao ...
+url = https://chieutruc.info/chieu-coi-xuan-hoa/
 
 [tiki.vn]
 match = -36.4%%
@@ -32,14 +32,14 @@ title = Sự phát triển của thai nhi tuần 18
 url = https://www.vinmec.com/vie/bai-viet/su-phat-trien-cua-thai-nhi-tuan-18-vi
 
 [www.youtube.com]
-match = -109.1%%
-title = 🔴 Trực Tiếp | U18 Việt Nam - U18 Thái Lan | Việt Nam Khẳng ...
-url = https://www.youtube.com/watch?v=uPDPr__M7aI
+match = -59.1%%
+title = Chiều Côi Sơn. Thị Trấn Gôi. Vụ Bản. NĐ...18. 7. 2024
+url = https://www.youtube.com/watch?v=m7F0VTU0EAI
 
 [www.facebook.com]
-match = 40.9%%
-title = Chiếu Cói Cao Cấp Nga Sơn
-url = https://www.facebook.com/chieucoiviettrang/
+match = 45.5%%
+title = Chiếu Cói Thân Vui Thái Bình
+url = https://www.facebook.com/p/Chiếu-Cói-Thân-Vui-Thái-Bình-100069860554625/
 
 [medlatec.vn]
 match = -109.1%%
