--- a/images/tham-chan-len-xu-1-40x60/config.ini
+++ b/images/tham-chan-len-xu-1-40x60/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-chan-len-xu-1-40x60.html
 lastopen = 2024-06-07 00:36:02
 
 [search]
-lastsearch = 2024-08-10 01:28:42
+lastsearch = 2024-08-10 03:53:16
 
 [shopee.vn]
-match = -104.2%%
-title = Thảm nỉ lau chân hình chữ nhật, chùi chân len mềm mịn dày dặn ...
-url = https://shopee.vn/Thảm-nỉ-lau-chân-hình-chữ-nhật-chùi-chân-len-mềm-mịn-dày-dặn-chống-trơn-trượt-hàng-chất-lượng-cao-i.1124996528.22086948160
+match = -58.3%%
+title = Thảm lau chân - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
+url = https://shopee.vn/list/thảm lau chân
 
 [lepetit.com.vn]
 match = -66.7%%
