--- a/images/chieu-truc-que-lam-loai-2-10/config.ini
+++ b/images/chieu-truc-que-lam-loai-2-10/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-2-10.html
 lastopen = 2024-06-07 00:19:30
 
 [search]
-lastsearch = 2024-08-10 01:45:39
+lastsearch = 2024-08-10 04:55:07
 
 [thegioidemviet.vn]
-match = 32.1%%
-title = BẢNG GIÁ Chiếu Trúc Việt Nam mới ...
-url = https://thegioidemviet.vn/chieu-truc/
+match = 35.7%%
+title = Bảng Giá Chiếu Trúc Quế Lâm [Chính hãng
+url = https://thegioidemviet.vn/chieu-truc-que-lam/
 
 [chieutrelanlan.com]
 match = 25.0%%
@@ -22,14 +22,14 @@ title = Chiếu Trúc Quế Lâm | Hai Phong
 url = https://www.facebook.com/ChieuTrucQueLam/
 
 [shopee.vn]
-match = 40.9%%
-title = chiếu trúc hạt quế lâm
-url = https://shopee.vn/chiếu-trúc-hạt-quế-lâm-i.74442027.7884536245
+match = 17.9%%
+title = CHIẾU TRÚC QUẾ LÂM MẮT NGỌC KHÔNG HOA VĂN ...
+url = https://shopee.vn/CHIẾU-TRÚC-QUẾ-LÂM-MẮT-NGỌC-KHÔNG-HOA-VĂN-HÀNG-LOẠI-1-BÓNG-ĐẸP-i.444652147.14296554126
 
 [demxanh.com]
 match = -25.0%%
 title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html?srsltid=AfmBOoo6ieiGY7CvDiZWvbqut2P2_k_UfSe7hMU0ohNNh-VumwduZRVP
+url = https://demxanh.com/chieu-truc.html
 
 [tiki.vn]
 match = -39.3%%
