--- a/images/man-in-hoa-dep-14/config.ini
+++ b/images/man-in-hoa-dep-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-14.html
 lastopen = 2024-06-10 00:17:58
 
 [search]
-lastsearch = 2024-08-10 02:25:25
+lastsearch = 2024-08-10 05:01:24
 
 [www.rockawayinc.com]
 match = 0.0%%
@@ -538,8 +538,8 @@ url = https://www.paveselaw.com/2024-legislative-updates-for-florida-homeowners-
 
 [www.elleman.vn]
 match = -23.5%%
-title = 14 buc anh dep ve dai duong
-url = https://www.elleman.vn/van-hoa-giai-tri/buc-anh-dep-nhat-national-geographic/attachment/14-buc-anh-dep-ve-dai-duong/
+title = van hoa dan gian - elle man (14)
+url = https://www.elleman.vn/van-hoa-giai-tri/bo-anh-dep-van-hoa-dan-gian-nhat/attachment/van-hoa-dan-gian-elle-man-14/
 
 [kenh14.vn]
 match = -170.6%%
@@ -579,7 +579,7 @@ url = https://rtrlaw.com/real-estate-law/what-are-the-changes-being-made-to-flor
 [didongviet.vn]
 match = -147.1%%
 title = Tải ngay hình nền hoa đẹp cho iPhone chất lượng cao nhất
-url = https://didongviet.vn/dchannel/hinh-nen-hoa-dep-cho-iphone/?srsltid=AfmBOoobJ4H7Ahn7F8Q1VRwmfMFhl8PMyYbyinRZOIZVjQMRcv1FL242
+url = https://didongviet.vn/dchannel/hinh-nen-hoa-dep-cho-iphone/?srsltid=AfmBOorrGRz6wo8VFb1SvoLX3xoOVVB4Hg1nvdwoQQkuKPI7UjhBjVjH
 
 [www.hud.gov]
 match = -205.9%%
@@ -628,8 +628,8 @@ url = https://www.hnammobile.com/tin-tuc/chup-anh-voi-hoa.26261.html
 
 [www.thegioididong.com]
 match = -152.9%%
-title = Top 19 laptop màn hình đẹp làm đồ họa, lên màu chuẩn ...
-url = https://www.thegioididong.com/game-app/top-14-laptop-man-hinh-dep-lam-do-hoa-len-mau-chuan-nhat-2021-1407877
+title = Top 14 game mobile (Android, iOS) đồ họa cực đẹp đáng ...
+url = https://www.thegioididong.com/game-app/top-14-game-mobile-android-ios-do-hoa-cuc-dep-dang-thu-nhat-1346797
 
 [support.apple.com]
 match = -158.8%%
@@ -715,4 +715,14 @@ url = https://www.fishandboat.com/Fishing/Regulations/Documents/SummaryBook.pdf
 match = -188.2%%
 title = Motchill | Phim Hay | Phim HD Vietsub | Xem Phim Online ...
 url = https://motchillj.tv/
+
+[fptshop.com.vn]
+match = -164.7%%
+title = Bật mí 5+ cách chụp ảnh đẹp trên iPhone 14 Pro Max cực ...
+url = https://fptshop.com.vn/tin-tuc/thu-thuat/cach-chup-anh-dep-tren-iphone-14-pro-max-162228?srsltid=AfmBOorL1Ljp_Y-FajIZ2J24GykM7Bfmya1ClG_YEbzNgf_Rb71En2Wz
+
+[tienphong.vn]
+match = -129.4%%
+title = Những màn pháo hoa 2019 nghệ thuật đẹp nhất thế giới
+url = https://tienphong.vn/nhung-man-phao-hoa-2019-nghe-thuat-dep-nhat-the-gioi-post1082196.tpo
 
