--- a/images/man-tu-bung-dinh-vuong-16/config.ini
+++ b/images/man-tu-bung-dinh-vuong-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-16.html
 lastopen = 2024-06-06 16:41:48
 
 [search]
-lastsearch = 2024-08-10 01:56:17
+lastsearch = 2024-08-10 04:49:17
 
 [munghoangphat.com]
 match = 12.0%%
@@ -17,14 +17,14 @@ title = Màn đỉnh vuông hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=màn đỉnh vuông
 
 [shopee.vn]
-match = -12.0%%
-title = mùng chụp tự bung đỉnh vuông giá tốt Tháng 8, 2024
-url = https://shopee.vn/search?keyword=mùng chụp tự bung đỉnh vuông
+match = -48.0%%
+title = Màn chụp vuông - Giá Tốt, Sale Tháng 08, Ship 0 Đồng
+url = https://shopee.vn/list/màn chụp/vuông
 
 [www.mungbaobao.com]
-match = 24.0%%
-title = Mùng Tự Bung Đỉnh Vuông 1m8 x 2m Viền Chân
-url = https://www.mungbaobao.com/mung-tu-bung-dinh-vuong-1m8-x-2m-bao-bao.html
+match = 48.0%%
+title = Mùng Chụp Tự Bung Đỉnh Vuông 1m6 x 2m
+url = https://www.mungbaobao.com/mung-chup-tu-bung-dinh-rong-1m6-x-2m-bao-bao.html
 
 [www.diepxuan.com]
 match = 100.0%%
