--- a/images/ruot-nem-korea-9f-14-19/config.ini
+++ b/images/ruot-nem-korea-9f-14-19/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-14-19.html
 lastopen = 2024-06-10 00:27:45
 
 [search]
-lastsearch = 2024-08-10 04:14:41
+lastsearch = 2024-08-10 04:45:05
 
 [en.wikipedia.org]
-match = -50.0%%
-title = Park Chung Hee
-url = https://en.wikipedia.org/wiki/Park_Chung_Hee
+match = -31.2%%
+title = Gwangju Uprising
+url = https://en.wikipedia.org/wiki/Gwangju_Uprising
 
 [www.britannica.com]
 match = 0.0%%
@@ -159,7 +159,7 @@ url = https://www.aljazeera.com/news/2024/7/19/on-north-koreas-tense-border-swis
 [www.google.com]
 match = 0.0%%
 title = 
-url = https://www.google.com/search?sca_esv=204ba30f3f000673&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwi3kNiN6uiHAxUOD1kFHUewElIQsZYEegQIJRAC
+url = https://www.google.com/search?sca_esv=204ba30f3f000673&sca_upv=1&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwj17c_z8OiHAxUUFFkFHX_tKI0QsZYEegQIKRAC
 
 [produccionesitaca.es]
 match = -21.4%%
