--- a/images/tham-giuong-ii-150x190/config.ini
+++ b/images/tham-giuong-ii-150x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-ii-150x190.html
 lastopen = 2024-06-17 14:26:11
 
 [search]
-lastsearch = 2024-08-10 04:12:59
+lastsearch = 2024-08-10 05:01:05
 
 [demxanh.com]
-match = 18.2%%
-title = Thảm trải giường lông cừu TLC 04
-url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-04.html
+match = -22.7%%
+title = Thảm trải giường lông cừu TLC 06 - Hà Nội
+url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-06.html
 
 [demre.com.vn]
 match = 18.2%%
@@ -17,9 +17,9 @@ title = Thảm ghế thảm giường - Trang 7
 url = https://demre.com.vn/tham-ghe-tham-giuong?sortby=created-asc&page=7
 
 [decoviet.vn]
-match = -50.0%%
-title = Thảm Lót Ghế Sofa | Thảm Phòng Khách Giá Rẻ
-url = https://decoviet.vn/tham-lot-ghe-sofa/
+match = 22.2%%
+title = Thảm Sofa Biên Hòa
+url = https://decoviet.vn/tham-sofa-bien-hoa/
 
 [demolympia.com]
 match = -40.9%%
