--- a/images/tham-giuong-ii-160x200/config.ini
+++ b/images/tham-giuong-ii-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-160x200.html
 lastopen = 2024-06-17 21:09:12
 
 [search]
-lastsearch = 2024-08-09 19:34:28
+lastsearch = 2024-08-10 04:56:32
 
 [www.diepxuan.com]
 match = 40.9%%
@@ -12,9 +12,9 @@ title = Thảm giường nỉ 160x200 - Điệp Xuân
 url = https://www.diepxuan.com/tham-giuong-ni-160x200.html
 
 [demxanh.com]
-match = -22.7%%
-title = Thảm trải giường cao su non màu xanh nhạt
-url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-xanh-nhat.html
+match = 18.2%%
+title = Thảm trải giường lông cừu TLC 02
+url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-02.html
 
 [www.lazada.vn]
 match = -113.6%%
@@ -135,4 +135,9 @@ url = https://tonybed.com/bo-drap-ga-trai-giuong-modal-21/
 match = -100.0%%
 title = Hơn 52 mẫu giường ngủ 1m6 đẹp giá rẻ | Giao hàng tận nhà
 url = https://dongagroup.vn/noi-that-phong-ngu/giuong-ngu/1m6-160.html
+
+[nemconcept.vn]
+match = -45.5%%
+title = Tấm bảo vệ nệm (Tấm lót nệm chống thấm)
+url = https://nemconcept.vn/san-pham/tam-bao-ve-nem/
 
