--- a/images/tui-warmdream-14/config.ini
+++ b/images/tui-warmdream-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-14.html
 lastopen = 2024-06-10 00:24:23
 
 [search]
-lastsearch = 2024-08-09 22:39:31
+lastsearch = 2024-08-10 05:00:22
 
 [www.diepxuan.com]
 match = 18.8%%
@@ -37,9 +37,9 @@ title = Báo cáo thị trường Nhân vật hoạt hình dành cho doanh ...
 url = https://metric.vn/nhan-vat-hoat-hinh
 
 [www.tiktok.com]
-match = -206.2%%
-title = #lipstick #foryou #foryoupage #fyp #meccamaxima #nars ...
-url = https://www.tiktok.com/@saramakeup.jpeg/video/6999173807848148226
+match = -225.0%%
+title = @Dior Transfer Proof Lipstick (720 Forever Icone) #dior ...
+url = https://www.tiktok.com/@anneprettyness/video/7274035586653064479
 
 [archiveofourown.org]
 match = -137.5%%
