--- a/images/bo-bon-mua-epm19064-180x200/config.ini
+++ b/images/bo-bon-mua-epm19064-180x200/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/bo-bon-mua-epm19064-180x200.html
 lastopen = 2024-06-06 17:08:27
 
 [search]
-lastsearch = 2024-08-10 05:44:34
+lastsearch = 2024-08-10 10:40:13
 
 [everonvn.com.vn]
 match = 15.8%%
 title = Bộ Everon Epm-19064
-url = https://everonvn.com.vn/everon/754/bo-everon-epm19064?srsltid=AfmBOoq3q1d50zBwNFhZ0zo_XAJQzPiPXWU5H7IxqrJxEtmdQfjfsQwP
+url = https://everonvn.com.vn/everon/754/bo-everon-epm19064
 
 [everon.com.vn]
 match = 5.3%%
 title = BỘ EVERON EPC 19043
-url = https://everon.com.vn/epc-19043/?srsltid=AfmBOoqrLBBd9i0Z7MVZeJz4TZFM7R69AvV268PxC3dtKXLFiFFHMBn6
+url = https://everon.com.vn/epc-19043/
 
 [demxanh.com]
 match = 18.5%%
 title = Bộ chăn ga gối EVeron EPM19068
-url = https://demxanh.com/bo-chan-ga-goi-everon-epm19068.html?srsltid=AfmBOorxtIs9d3C3kz2Z_nqM16EHJHJ-m_fg4hrSTNLzfdoMhBotiXYg
+url = https://demxanh.com/bo-chan-ga-goi-everon-epm19068.html
 
 [shopee.vn]
 match = -48.1%%
