--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-phu-mau-160x200.html
 lastopen = 2024-06-17 03:11:36
 
 [search]
-lastsearch = 2024-08-10 05:36:25
+lastsearch = 2024-08-10 10:32:34
 
 [tiki.vn]
 match = -138.9%%
@@ -44,7 +44,7 @@ url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xanh-dam.html
 [foreverbedding.net]
 match = -61.1%%
 title = Bộ ga phủ Mystic-T 26 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-phu-mystic-t-26?srsltid=AfmBOoorwgyY1ZUqdfFR7U_jrLKSTU7gqAPly71zqmsGXVi1hTA0Uqt-
+url = https://foreverbedding.net/bo-ga-phu-mystic-t-26
 
 [aeoneshop.com]
 match = -105.6%%
@@ -54,7 +54,7 @@ url = https://aeoneshop.com/product/29675/bo-chan-ga-goi-lam-mat-gau-ss24-160x20
 [everonvn.com.vn]
 match = 27.8%%
 title = Bộ Everon Esm-20011
-url = https://everonvn.com.vn/everon/809/bo-everon-esm-20011?srsltid=AfmBOopDELoRclC6-Rg7DJcOhhog15fhjXFvRqgM-y7s8pDPc6fpEgjI
+url = https://everonvn.com.vn/everon/809/bo-everon-esm-20011
 
 [www.everonvni.vn]
 match = -77.8%%
@@ -139,7 +139,7 @@ url = https://www.facebook.com/fitin.vn/
 [www.diepxuan.com]
 match = 27.8%%
 title = Bộ phủ màu 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/bo-phu-mau-180x200.html?srsltid=AfmBOooRXQvRiyQ_cVMlG-nzU8PVZsQsejbfYkhx8rY9dk680M7PCS6v
+url = https://www.diepxuan.com/bo-phu-mau-180x200.html
 
 [dovihome.vn]
 match = 6.7%%
