--- a/images/nem-lo-xo-everon-pocket-18/config.ini
+++ b/images/nem-lo-xo-everon-pocket-18/config.ini
@@ -64,7 +64,7 @@ url = https://nemgiakho.com/nem-lo-xo-tui-everon-pocket-pops.html
 [everon.com.vn]
 match = -34.6%%
 title = Đệm Lò Xo Everon Pocket Pops | Chính Hãng Tại Việt Nam ...
-url = https://everon.com.vn/dem-lo-xo-pocket-pops/
+url = https://everon.com.vn/dem-lo-xo-pocket-pops/?srsltid=AfmBOoqQrbsR5ZnPL9R8kXPQxsUbY9FGekASZV0T8Xn0RdnZncNOKGUw
 
 [demxanh.com]
 match = -19.2%%
