--- a/images/tham-chan-len-xu-1-60x90/config.ini
+++ b/images/tham-chan-len-xu-1-60x90/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-chan-len-xu-1-60x90.html
 lastopen = 2024-06-07 00:36:31
 
 [search]
-lastsearch = 2024-08-10 04:50:18
+lastsearch = 2024-08-10 10:46:09
 
 [shopee.vn]
-match = -29.2%%
-title = THẢM CHÙI CHÂN NỈ 60x90cm ĐẾ CAO SU CHỐNG ...
-url = https://shopee.vn/THẢM-CHÙI-CHÂN-NỈ-60x90cm-ĐẾ-CAO-SU-CHỐNG-TRƠN-TRƯỢT-THAM-CHÙI-CHÂN-SỢI-LEN--i.164381765.7711423471
+match = 4.2%%
+title = THẢM CHÙI CHÂN WELCOME CỠ ĐẠI 60x90CM, ...
+url = https://shopee.vn/THẢM-CHÙI-CHÂN-WELCOME-CỠ-ĐẠI-60x90CM-Thảm-lau-chân-Khách-Sạn-Siêu-Thị-Điện-Máy-Tòa-Nhà-Lớn-i.164381765.7711779537
 
 [thamsofanhapkhau.com]
 match = -87.5%%
@@ -175,4 +175,9 @@ url = https://www.sendo.vn/tham-nhua-lau-chan-welcome-chu-nhat-tham-chui-chan-du
 match = 8.3%%
 title = Thảm chùi chân nhựa welcome màu ghi
 url = https://thamtraisanlacviet.com/sptv/chui-chan-nhua-welcome-mau-ghi/
+
+[vppminhanh.vn]
+match = 25.0%%
+title = Thảm nhựa lau chân Welcome 60x90cm
+url = https://vppminhanh.vn/nhu-yeu-pham/tham-nhua-welcome-60x90cm
 
