--- a/images/tui-singapore14/config.ini
+++ b/images/tui-singapore14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-singapore14.html
 lastopen = 2024-06-17 10:45:32
 
 [search]
-lastsearch = 2024-08-10 04:24:26
+lastsearch = 2024-08-10 10:49:26
 
 [www.tui.co.uk]
-match = 6.7%%
-title = Flight Timetable
-url = https://www.tui.co.uk/flight/timetable
+match = -160.0%%
+title = Marella Cruises | Cruise Holidays 2024 / 2025
+url = https://www.tui.co.uk/cruise/
 
 [cruisepanda.com]
 match = -213.3%%
